Fixed prismjs line numbers spacing

--- a/prism/prism.css
+++ b/prism/prism.css
@@ -224,7 +224,7 @@ pre[data-line] code {
 	padding-left: 4em;
 }
 pre .line-highlight {
-	margin-top: 0.5em;
+	margin-top: 0.2em;
 }
 
 pre[data-line] {
